<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:text="@string/btnGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_Grid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:text="@string/btnGrid1"
        app:layout_constraintStart_toEndOf="@+id/btn_Grid"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Grid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:text="@string/btnGrid2"
        app:layout_constraintStart_toEndOf="@+id/btn_Grid1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/brn_Gird3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/btnGrid3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Grid" />

    <Button
        android:id="@+id/btn_Grid4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/btnGrid4"
        app:layout_constraintStart_toEndOf="@+id/brn_Gird3"
        app:layout_constraintTop_toBottomOf="@+id/btn_Grid1" />

    <Button
        android:id="@+id/btn_Grid5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/btnGrid5"
        app:layout_constraintStart_toEndOf="@+id/btn_Grid4"
        app:layout_constraintTop_toBottomOf="@+id/btn_Grid2" />

    <Button
        android:id="@+id/btn_Grid6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/btnGrid6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brn_Gird3" />

    <Button
        android:id="@+id/btn_Grid7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/btnGrid7"
        app:layout_constraintStart_toEndOf="@+id/btn_Grid6"
        app:layout_constraintTop_toBottomOf="@+id/btn_Grid4" />

    <Button
        android:id="@+id/btn_Grid8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/btnGrid8"
        app:layout_constraintStart_toEndOf="@+id/btn_Grid7"
        app:layout_constraintTop_toBottomOf="@+id/btn_Grid5" />

</androidx.constraintlayout.widget.ConstraintLayout>